--- a/CCM_New/Client/Shared/NavMenu.razor
+++ b/CCM_New/Client/Shared/NavMenu.razor
@@ -50,19 +50,19 @@
                 <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
                     <span class="oi oi-badge" aria-hidden="true" style="align-self"></span> Reson code
                 </NavLink>
-                <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
+                <NavLink class="nav-link" href="CustomerPage" style="margin-left: 15px">
                     <span class="oi oi-people" aria-hidden="true" style="align-self"></span> Customers
                 </NavLink>
-                <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
+                <NavLink class="nav-link" href="Dcpage" style="margin-left: 15px">
                     <span class="oi oi-box" aria-hidden="true" style="align-self"></span> DC
                 </NavLink>
-                <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
-                    <span class="oi oi-file" aria-hidden="true" style="align-self"></span> ASN
-                </NavLink>
-                <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
+                <NavLink class="nav-link" href="RootCausePage" style="margin-left: 15px">
                     <span class="oi oi-wrench" aria-hidden="true" style="align-self"></span> Root causes
                 </NavLink>
-                <NavLink class="nav-link" href="ReasonCode" style="margin-left: 15px">
+                <NavLink class="nav-link" href="AsnDataPage" style="margin-left: 15px">
+                    <span class="oi oi-file" aria-hidden="true" style="align-self"></span> ASN
+                </NavLink>
+                <NavLink class="nav-link" href="sapDNDataPage" style="margin-left: 15px">
                     <span class="oi oi-spreadsheet" aria-hidden="true" style="align-self"></span> SAP data
                 </NavLink>
                 <NavLink class="nav-link" href="EditUsersPage" style="margin-left: 15px">
